--- a/NeuralProgram_1.1
+++ b/NeuralProgram_1.1
@@ -1,6 +1,6 @@
 import numpy as np
 import matplotlib.pyplot as plt
-from scipy.signal import butter, lfilter, bandpass
+from scipy.signal import butter, lfilter
 import plotly.graph_objects as go
 import tensorflow as tf
 from sklearn.model_selection import train_test_split
